[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control] 
disable = [
	'trailing-whitespace',
        'trailing-newlines',
        ]

[tool.pytest.ini_options]
testpaths = [ "daisy_vis" ]
addopts = [
        "--mpl", 
        "--mpl-baseline-path=test-data/baseline/matplotlib-3.8.2",
        # Uncomment the line below and add matplotlib version to generate test images.
        #"--mpl-generate-path=test-data/baseline/matplotlib-3.8.2"
        ]

[tool.coverage.run]
command_line = "-m pytest"
source = ["."]

[tool.coverage.report]
show_missing = "true"