[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "daisypy-vis"
authors = [
  { name="Silas Nyboe Ørting", email="silas@di.ku.dk" },
]
description = "Visualization module for Daisy log files (dlf)"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pandas",
    "matplotlib",
    "plotly",
    "dash"
 ]
version = "0.3.1"
readme = "README.md"

[project.urls]
Homepage = "https://daisy.ku.dk/"
Repository = "https://github.com/daisy-model/daisy-vis"
Issues = "https://github.com/daisy-model/daisy-vis/issues"

[project.optional-dependencies]
test =[
     "coverage",
     "pytest",
     "pytest-mpl",
     "kaleido",
     "pillow"
]
lint = [
     "pylint",
     "pytest",
     "pillow"
]
all = [
    "coverage",
    "pytest",
    "pytest-mpl",
    "kaleido",
    "pillow",
    "pylint"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["daisypy.*"]

[tool.pylint.messages_control] 
disable = [
    'trailing-whitespace',
    'trailing-newlines',
 ]

[tool.pytest.ini_options]
testpaths = [ "daisypy" ]
addopts = [
    "--mpl", 
    "--mpl-baseline-path=test-data/baseline/matplotlib-3.8.2",
    "--mpl-results-path=test-data/results"
    # Uncomment the line below and add matplotlib version to generate test images.
    #"--mpl-generate-path=test-data/baseline/matplotlib-3.8.2"
]
filterwarnings = [
    "error",
    'ignore:\sPyarrow will become a required dependency of pandas:DeprecationWarning',
    'ignore:np.find_common_type is deprecated:DeprecationWarning'
]

[tool.coverage.run]
command_line = "-m pytest"
source = ["."]

[tool.coverage.report]
show_missing = "true"
