[metadata]
name = daisy_vis

# Extract version from __version__ defined in __init__.py file
version = attr:daisy_vis.__version__

description = Visualization module for Daisy log files (dlf)
long_description = README.md
long_description_content_type = text/markdown

author = Silas Nyboe Ørting
author_email = silas@di.ku.dk

# Look at https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

license = GNU General Public License v3 or later (GPLv3+)
license_files = LICENSE

platforms = any

[options]
install_requires =
    pandas
packages = find_namespace:
package_dir =
    =.

[options.packages.find]
where = .